--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.AMiMa.shop">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_configure"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,17 +14,35 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Shop">
         <activity
-            android:name=".ui.LogIn"
+            android:name=".toolbar"
             android:exported="false" />
         <activity
-            android:name=".ui.RegisterActivity"
-            android:exported="true">
+            android:name=".ui.Cart"
+            android:exported="false" />
+        <activity
+            android:name=".ui.PersonalCabinet"
+            android:exported="false" />
+        <activity
+            android:name=".ui.DetailedProduct"
+            android:exported="false" />
+        <activity
+            android:name=".ui.AddProduct"
+            android:exported="false" />
+        <activity
+            android:name=".ui.ListProducts"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.LogIn"
+            android:exported="false" />
+        <activity
+            android:name=".ui.RegisterActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
