--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
 
     implementation 'org.jsoup:jsoup:1.16.2'
     implementation 'commons-io:commons-io:2.8.0'
+    implementation 'com.google.code.gson:gson:2.8.7'
 }
